--- a/AngularMvcProject/App/View/Reports/ResourceReports.html
+++ b/AngularMvcProject/App/View/Reports/ResourceReports.html
@@ -28,9 +28,10 @@
         background-color: #00bbc5 !important;
         color: #fff !important;
     }
+
     .gre_bg.buttons_sec.text-right.margin_top20 a.ng-isolate-scope {
-    margin-top: 20px;
-}
+        margin-top: 20px;
+    }
 </style>
 
 
@@ -233,13 +234,13 @@
                             </ul>
                         </div>
                     </div>-->
-                    <div class="col-sm-9 col-md-12" >
+                    <div class="col-sm-9 col-md-12">
                         <div class="right_tabcontent">
                             <div class="business_content">
                                 <h3> Resource Report </h3>
                                 <div class="gre_bg time_frame">
                                     <div class="row">
-                                        <div class="col-sm-3 text-left"> 
+                                        <div class="col-sm-3 text-left">
                                             <h4 class="resource_hd"> Resource</h4>
                                         </div>
                                         <div class="col-sm-9 text-right resources_div">
@@ -247,9 +248,11 @@
                                                 All Resources
                                                 <input type="checkbox" name="timeframe" value="AllResource" id="" ng-model="checked" ng-click="GetAllResourcesReport(checked)">
                                             </label>
+
                                             <select ng-disabled="allresourcechecked" ng-model="SelectedResource" ng-change="ResourceChange(SelectedResource)">
-                                                <option ng-repeat="item in Resources" value="{{item.Id}}">{{item.staffName}}</option>                                               
+                                                <option ng-repeat="item in Resources" value="{{item.Id}}">{{item.staffName}}</option>
                                             </select>
+                                            <!--<span class="daytimecarticon resourcecarticon"><i class="fa fa-caret-down" aria-hidden="true"></i></span>-->
                                         </div>
                                     </div>
                                 </div>
@@ -294,47 +297,47 @@
                                 </div>
                                 <div class="gre_bg buttons_sec text-right margin_top20">
                                     <div class="row" ng-show="ResourceTimeFrame">
-                                            <div class="col-md-6">
-                                                <div class="betweenDateDiv">
-                                                    <label class="beetweenlabel">Between:</label>
-                                                    <div class="dateBtnDiv">
-                                                        <select class="form-control dateselect" ng-model="SelectedStartDate" ng-change="GetTimeFrameReports()">
-                                                            <option ng-repeat="item in Date" value="{{item}}" >{{item}}</option>                                                         
-                                                        </select>
-                                                    </div>
-                                                    <div class="dateBtnDiv">
-                                                        <select class="form-control dateselect" ng-model="SelectedStartMonth" ng-change="GetTimeFrameReports()">
-                                                            <option ng-repeat="item in Months" >{{item}}</option>                                                        
-                                                        </select>
-                                                    </div>
-                                                    <div class="dateBtnDiv">
-                                                        <select class="form-control dateselect" ng-model="SelectedStartYear" ng-change="GetTimeFrameReports()">
-                                                            <option ng-repeat="item in Years" >{{item}}</option>                                                       
-                                                        </select>
-                                                    </div>
+                                        <div class="col-md-6">
+                                            <div class="betweenDateDiv">
+                                                <label class="beetweenlabel">Between:</label>
+                                                <div class="dateBtnDiv">
+                                                    <select class="form-control dateselect" ng-model="SelectedStartDate" ng-change="GetTimeFrameReports()">
+                                                        <option ng-repeat="item in Date" value="{{item}}">{{item}}</option>
+                                                    </select>
                                                 </div>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <div class="betweenDateDiv">
-                                                    <label class="beetweenlabel">and</label>
-                                                    <div class="dateBtnDiv">
-                                                        <select class="form-control dateselect" ng-model="SelectedEndDate" ng-change="GetTimeFrameReports()">
-                                                            <option ng-repeat="date in Date">{{date}}</option>
-                                                        </select>
-                                                    </div>
-                                                    <div class="dateBtnDiv">
-                                                        <select class="form-control dateselect" ng-model="SelectedEndMonth" ng-change="GetTimeFrameReports()">
-                                                            <option ng-repeat="month in Months">{{month}}</option>
-                                                        </select>
-                                                    </div>
-                                                    <div class="dateBtnDiv">
-                                                        <select class="form-control dateselect" ng-model="SelectedEndYear" ng-change="GetTimeFrameReports()">
-                                                            <option ng-repeat="year in Years">{{year}}</option>
-                                                        </select>
-                                                    </div>
+                                                <div class="dateBtnDiv">
+                                                    <select class="form-control dateselect" ng-model="SelectedStartMonth" ng-change="GetTimeFrameReports()">
+                                                        <option ng-repeat="item in Months">{{item}}</option>
+                                                    </select>
+                                                </div>
+                                                <div class="dateBtnDiv">
+                                                    <select class="form-control dateselect" ng-model="SelectedStartYear" ng-change="GetTimeFrameReports()">
+                                                        <option ng-repeat="item in Years">{{item}}</option>
+                                                    </select>
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="col-md-6">
+                                            <div class="betweenDateDiv">
+                                                <label class="beetweenlabel">and</label>
+                                                <div class="dateBtnDiv">
+                                                    <select class="form-control dateselect" ng-model="SelectedEndDate" ng-change="GetTimeFrameReports()">
+                                                        <option ng-repeat="date in Date">{{date}}</option>
+                                                    </select>
+                                                </div>
+                                                <div class="dateBtnDiv">
+                                                    <select class="form-control dateselect" ng-model="SelectedEndMonth" ng-change="GetTimeFrameReports()">
+                                                        <option ng-repeat="month in Months">{{month}}</option>
+                                                    </select>
+                                                </div>
+                                                <div class="dateBtnDiv">
+                                                    <select class="form-control dateselect" ng-model="SelectedEndYear" ng-change="GetTimeFrameReports()">
+                                                        <option ng-repeat="year in Years">{{year}}</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                     <a ng-csv="ResourceReport" csv-label="true" filename="ResourceReports.csv"> <i class="fa fa-cloud-download" aria-hidden="true"></i> Download as CSV </a>
                                     <!--<a ng-csv="ResourceReport" csv-label="true" filename="BuisnessReports.csv"> Show Results </a>-->
                                     <div class="clearfix"></div>
@@ -344,7 +347,7 @@
                                         Showing data for {{StartDate | date :"dd MMM yyyy"}} to {{EndDate | date :"dd MMM yyyy"}}
                                     </h3>
                                     <h3 ng-if="time=='today'">
-                                        Showing data for {{StartDate | date :"dd MMM yyyy"}} 
+                                        Showing data for {{StartDate | date :"dd MMM yyyy"}}
                                     </h3>
                                     <div class="service_table">
                                         <div class="table-responsive table_1">
@@ -371,7 +374,7 @@
                                                         <td>{{item.CancellationRate}}</td>
                                                         <td>{{item.Tasks}}</td>
                                                     </tr>
-                                                    
+
                                                     <tr ng-if="ResourcerReportsloader">
                                                         <td></td>
                                                         <td></td>
