Changes related to Report section

--- a/AngularMvcProject/App/View/Reports/ResourceReports.html
+++ b/AngularMvcProject/App/View/Reports/ResourceReports.html
@@ -338,7 +338,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <a ng-csv="ResourceReport" csv-label="true" filename="ResourceReports.csv"> <i class="fa fa-cloud-download" aria-hidden="true"></i> Download as CSV </a>
+                                    <a ng-csv="ResourceReport" csv-header="['Resource','Bookings','Revenue','Duration(Hours)','Cancellations','CancellationRate','Tasks']" filename="ResourceReports.csv"> <i class="fa fa-cloud-download" aria-hidden="true"></i> Download as CSV </a>
                                     <!--<a ng-csv="ResourceReport" csv-label="true" filename="BuisnessReports.csv"> Show Results </a>-->
                                     <div class="clearfix"></div>
                                 </div>
