--- a/AngularMvcProject/App/View/Reports/CustomerReports.html
+++ b/AngularMvcProject/App/View/Reports/CustomerReports.html
@@ -35,7 +35,7 @@
 }
 </style>
 
-<div ng-app="bookingApp">
+<div ng-app="bookingApp" ng-init="init()">
 
 
     <div style="width: 100%;text-align: center;position: absolute;z-index: 999999; top:65px;" ng-if="IsVisible"><span id="voice-box" class="noDisplay" style="background:yellow; padding:5px 10px; border-radius:0 0 2px 2px;" ng-bind="MessageText"></span></div>
