Changes related to Customer report in report section

--- a/AngularMvcProject/App/View/Calendar/Calendar.html
+++ b/AngularMvcProject/App/View/Calendar/Calendar.html
@@ -164,7 +164,7 @@
                         <!--<div id="display"><input type="button" ng-click="GetCurrentEvent()"/></div>-->
                         <div id="calendar" ui-calendar="uiConfig.calendar" config="uiConfig.calendar" ng-model="eventSources" calendar="myCalendar"></div>
                     </div>
-                    <div class="col-md-4">
+                    <!--<div class="col-md-4">
                         <div ng-show="SelectedEvent" class="alert alert-success" style="margin-top:50px">
                             <h2 style="margin-top:0px">Selected Event:</h2>
                             <h3 style="color:#A9A50E">{{SelectedEvent.title}}</h3>
@@ -173,7 +173,7 @@
                             <h3 style="color:#A9A50E">{{SelectedEvent.end}}</h3>
                             <p>{{SelectedEvent.description}}</p>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
 
             </div>
