--- a/AngularMvcProject/App/View/Reports/ServiceReports.html
+++ b/AngularMvcProject/App/View/Reports/ServiceReports.html
@@ -34,7 +34,7 @@
     }
 </style>
 
-<div ng-app="bookingApp" ng-init="init()">
+<div ng-app="bookingApp" ng-controller="ServiceReportsController" ng-init="init()">
 
 
     <div style="width: 100%;text-align: center;position: absolute;z-index: 999999; top:65px;" ng-if="IsVisible"><span id="voice-box" class="noDisplay" style="background:yellow; padding:5px 10px; border-radius:0 0 2px 2px;" ng-bind="MessageText"></span></div>
@@ -220,7 +220,7 @@
 
             </ul>
         </div>
-        <div ng-controller="ServiceReportsController" ng-init="init()">
+        <div>
             <div class="tab_section tab_section2">
                 <div class="container-fluid">
                     <div class="row">
@@ -339,9 +339,11 @@
                                         <div class="clearfix"></div>
                                     </div>
                                     <div class="inner_busscontent">
-                                        <h3>
-                                            Showing data for {{StartDate | date :"dd MMM yyyy"}} to {{EndDate| date :"dd MMM yyyy"}}
-
+                                        <h3 ng-if="time!='today'">
+                                            Showing data for {{StartDate | date :"dd MMM yyyy"}} to {{EndDate | date :"dd MMM yyyy"}}
+                                        </h3>
+                                        <h3 ng-if="time=='today'">
+                                            Showing data for {{StartDate | date :"dd MMM yyyy"}}
                                         </h3>
                                         <div class="customer_table">
                                             <div class="table-responsive table_1">
