Changes related to Report and Calendar section

--- a/AngularMvcProject/App/View/wizard/wizard.html
+++ b/AngularMvcProject/App/View/wizard/wizard.html
@@ -427,7 +427,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-md-6 col-sm-6 col-xs-6">
-                                                <div class="week_div businessHourSelect">
+                                                <div class="week_div businessHourSelect businesshourDiv">
                                                     <select class="select_btn" ng-required="true" ng-model="timedata.timeFrom" ng-disabled="!timedata.available">
                                                         <option ng-repeat="option in timeInfoFrom" value="{{option}}">{{option}}</option>
                                                     </select>
