--- a/AngularMvcProject/Content/Assets/css/custom.css
+++ b/AngularMvcProject/Content/Assets/css/custom.css
@@ -4763,6 +4763,11 @@ div#staff-break .BreakSelectDiv select {
     background-position-y: 15px !important;
     padding: 5px 15px 5px 10px;
 }
+.businesshourDiv select.select_btn {
+    padding: 5px 14px 5px 10px;
+    background-position: right 3px top 15px !important;
+}
+
 
 .appointProvider.serviceCategoryList .glyphicon-chevron-down.chevronDownIcon {
     margin-top: 2px;
@@ -4775,6 +4780,146 @@ div#staff-break .BreakSelectDiv select {
     float:none;
 }
 /* sep-21 css end here                           */
+
+/* sep-27 css start here           */
+
+.calendarPopupDetail {
+    border-bottom:none;
+}
+.calendarPopupDetail li a {
+    background: none;
+    border: none;
+    padding: 16px 10px;
+    font-size: 12px;
+    border-bottom: none !important;
+    color:#BCC0C3;
+}
+.calendarPopupDetail li.active a {
+    background: none;
+    border: none;
+    padding: 16px 10px;
+    font-size: 12px;
+     color:#4f4f4f;
+
+}
+.calendarPopupDetail li a:hover {
+    background: none;
+
+}
+.calendarCustomerSec .customerNameDiv .customerName {
+    margin-top: 10px;
+    font-size: 16px !important;
+}
+.calendarCustomerSec .appointaploadDiv {
+    margin-bottom: 0;
+}
+.calendarCustomerSec {
+    border: 1px solid #E1E1E1;
+    padding: 10px 20px 20px;
+    margin-bottom: 10px;
+}
+
+.calendarPopupDetail li.active a:hover {
+    background: none;
+    border: none;
+
+}
+.calendarCustomerSec .customerUserDiv img {
+    border-radius: 100%;
+        height: 40px;
+    width: 40px;
+}
+.customerProfileDiv.calendarCustomerSec span.uploadImageIcon i {
+    top: 15px;
+    width: 25px;
+    height: 25px;
+    font-size: 12px;
+    padding-top: 6px;
+    left: 46px;
+}
+.calendarPopUpIcon {
+    text-align: right;
+    display: block;
+    color: #7A7D81;
+    font-size:22px;
+    cursor:pointer;
+}
+
+.calendarCustomerSec .fileupload.fileupload-new {
+    margin: 0;
+}
+
+.customerFieldDiv {
+    margin-left: 30px;
+    margin-top: 30px;
+    margin-right: 30px;
+    padding-bottom: 25px;
+    border-bottom: 1px dashed #CCC;
+    position: relative;
+}
+.apptcustomericon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #7d7d7d;
+}
+.customerFieldDiv .searchCustomerField {
+    box-shadow: none;
+    transition: none;
+    border-radius: 3px;
+    margin-bottom: 5px;
+    padding-right: 30px;
+    height: 40px;
+    font-size: 13px;
+}
+.customerFieldDiv .searchCustomerField:focus {
+    background-color: #fff !important;
+    border-color: rgba(39, 195, 187, 0.8) !important;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(39, 195, 187, 0.6) !important;
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(39, 195, 187, 0.6) !important;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(39, 195, 187, 0.6) !important;
+}
+.apptnewcustomerbtn {
+    width: 130px;
+    display: block;
+    margin: 30px auto 50px auto;
+    background: #F1F5F7;
+    border: solid 1px #D7D7D7;
+    line-height: 40px;
+    color: #5a5a5a !important;
+    font-size: 13px;
+    -moz-border-radius: 3px 3px 3px 3px;
+    -webkit-border-radius: 3px 3px 3px 3px;
+    border-radius: 3px 3px 3px 3px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none !important;
+}
+.searching-cust {
+    position: absolute;
+    width: 100%;
+    margin-top: -5px;
+    margin-left: 0px;
+    height: 40px;
+    background: #fff;
+    line-height: 38px;
+    -moz-box-shadow: 0 1px 6px #777;
+    -webkit-box-shadow: 0 1px 6px #777;
+    box-shadow: 0 1px 6px #777;
+    font-size:12px;
+    padding-left: 10px;
+    list-style: none;
+}
+/*.searchCustomer {
+    display:none;
+}*/
+.calendarPopupDetail li.active {
+    border-bottom: 2px solid #000;
+}
+
+
+
+/* sep-27 css start here           */
 
 /* media css start here ================================= */
 
