Changes related to Report and Calendar section

--- a/AngularMvcProject/App/View/Reports/ResourceReports.html
+++ b/AngularMvcProject/App/View/Reports/ResourceReports.html
@@ -354,13 +354,13 @@
                                             <table class="table table-bordered">
                                                 <thead>
                                                     <tr>
-                                                        <th ng-click="GetReportbyOrder('Resource')">Resource <i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
-                                                        <th ng-click="GetReportbyOrder('Bookings')"> Bookings <i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
-                                                        <th ng-click="GetReportbyOrder('Revenue')">  Revenue <i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
-                                                        <th ng-click="GetReportbyOrder('Duration')"> Duration (Hours) <i class="table-sort fa fa-sort" aria-hidden="true"></i> </th>
-                                                        <th ng-click="GetReportbyOrder('Cancellations')"> Cancellations <i class="table-sort fa fa-sort" aria-hidden="true"></i> </th>
-                                                        <th ng-click="GetReportbyOrder('CancellationRate')">  Cancellation Rate <i class="table-sort fa fa-sort" aria-hidden="true"></i> </th>
-                                                        <th ng-click="GetReportbyOrder('Tasks')"> Tasks  <i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
+                                                        <th ng-click="GetReportbyOrder('EmployeeFirstName')">Resource <i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
+                                                        <th ng-click="GetReportbyOrder('TotalBookingsAssigned')"> Bookings <i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
+                                                        <th ng-click="GetReportbyOrder('TotalRevenue')">  Revenue <i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
+                                                        <th ng-click="GetReportbyOrder('DurationInHours')"> Duration (Hours) <i class="table-sort fa fa-sort" aria-hidden="true"></i> </th>
+                                                        <th ng-click="GetReportbyOrder('TotalCancellations')"> Cancellations <i class="table-sort fa fa-sort" aria-hidden="true"></i> </th>
+                                                        <th ng-click="GetReportbyOrder('PerntageOfTotalCancellations')">  Cancellation Rate <i class="table-sort fa fa-sort" aria-hidden="true"></i> </th>
+                                                        <th ng-click="GetReportbyOrder('TotalBookingsCompleted')"> Tasks  <i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
