--- a/AngularMvcProject/App/View/Reports/ServiceReports.html
+++ b/AngularMvcProject/App/View/Reports/ServiceReports.html
@@ -350,12 +350,12 @@
                                                 <table class="table table-bordered">
                                                     <thead>
                                                         <tr>
-                                                            <th ng-click="GetServiceReportByOrder('Service')">Service <i class="table-sort fa fa-sort" aria-hidden="true"></i> </th>
-                                                            <th ng-click="GetServiceReportByOrder('Category')">Category <i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
-                                                            <th ng-click="GetServiceReportByOrder('Booking')">Booking <i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
-                                                            <th ng-click="GetServiceReportByOrder('Revenue')">Revenue <i class="table-sort fa fa-sort" aria-hidden="true"></i> </th>
-                                                            <th ng-click="GetServiceReportByOrder('Cancellations')">Cancellations  <i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
-                                                            <th ng-click="GetServiceReportByOrder('Cancellation Rate')">Cancellation Rate <i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
+                                                            <th ng-click="GetServiceReportByOrder('ServiceName')">Service <i class="table-sort fa fa-sort" aria-hidden="true"></i> </th>
+                                                            <th ng-click="GetServiceReportByOrder('CategoryName')">Category <i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
+                                                            <th ng-click="GetServiceReportByOrder('TotalBookings')">Booking <i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
+                                                            <th ng-click="GetServiceReportByOrder('TotalConfirmedRevenue')">Revenue <i class="table-sort fa fa-sort" aria-hidden="true"></i> </th>
+                                                            <th ng-click="GetServiceReportByOrder('TotalCancellations')">Cancellations  <i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
+                                                            <th ng-click="GetServiceReportByOrder('PerntageOfTotalCancellations')">Cancellation Rate <i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
                                                         </tr>
                                                     </thead>
                                                     <tbody>
