--- a/AngularMvcProject/App/View/Reports/CustomerReports.html
+++ b/AngularMvcProject/App/View/Reports/CustomerReports.html
@@ -237,8 +237,29 @@
                             <div class="right_tabcontent">
                                 <div class="business_content">
                                     <h3> Top 25 Customers Report </h3>
-                                    <div class="gre_bg time_frame margin_top20">
+                                    <div class="gre_bg time_frame">
+                                        <div class="row">
+                                            <div class="col-sm-3 text-left">
+                                                <h4 class="resource_hd">Customer</h4>
+                                            </div>
+                                            <div class="col-sm-9 text-right resources_div">
+                                                <label class="all resources" for="timeframe_today">
+                                                    All Customer
+                                                    <input type="checkbox" name="timeframe" value="AllCustomer" id="" ng-model="checked" ng-click="GetAllCustomerReport(checked)">
+                                                </label>
+                                                <select ng-disabled="allcustomerchecked" ng-model="SelectedCustomer" ng-change="CustomerChange(SelectedCustomer)">
+                                                    <option ng-repeat="item in ListofCustomers" value="{{item.Id}}">{{item.FirstName}}</option>
+                                                </select>
+                                                <!--<span class="daytimecarticon resourcecarticon"><i class="fa fa-caret-down" aria-hidden="true"></i></span>-->
+                                            </div>
+                                        </div>
+                                    </div>
 
+
+
+
+
+                                    <div class="gre_bg time_frame margin_top20">
                                         <div class="row">
                                             <div class="col-sm-4 text-left">
                                                 <h4> Time Frame </h4>
@@ -329,9 +350,9 @@
                                                 <table class="table table-bordered">
                                                     <thead>
                                                         <tr>
-                                                            <th>Customer<i class="table-sort fa fa-sort" aria-hidden="true"></i> </th>
-                                                            <th>Bookings<i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
-                                                            <th>Revenue<i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
+                                                            <th ng-click="GetCustomerReportbyOrder('CustomerFirstName')">Customer<i class="table-sort fa fa-sort" aria-hidden="true"></i> </th>
+                                                            <th ng-click="GetCustomerReportbyOrder('TotalBookings')">Bookings<i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
+                                                            <th ng-click="GetCustomerReportbyOrder('TotalConfirmedRevenue')">Revenue<i class="table-sort fa fa-sort" aria-hidden="true"></i></th>
 
                                                         </tr>
                                                     </thead>
